# pandas-hello-world

./: 10 minutes to Pandas (more like 60).ipynb  How To Learn Pandas.ipynb  foo.csv  foo.h5  foo.xlsx  pyproject.toml
.ipynb_checkpoints/: 10 minutes to Pandas (more like 60)-checkpoint.ipynb
