[tool.poetry]
name = "pandas-hello-world"
version = "0.1.0"
description = ""
authors = ["Samir Azzouz <s.azzouz97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
scipy = "^1.5.4"
jupyterlab = "^2.2.9"
tables = "^3.6.1"
openpyxl = "^3.0.5"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
